Software Issues fix
fixed dashboard issue, fixed audit_log persistance, solved data.json data accuracy, fixed storage restart bug
